--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,17 +7,11 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.0'
+
         // START: FlutterFire Configuration
-        classpath 'com.google.gms:google-services:4.3.14'  // manual update to 4.3.14
+        classpath 'com.google.gms:google-services:+'
         // END: FlutterFire Configuration
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // firebase auth
-        implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
-
-        // Required only if Facebook login support is required
-        // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
-        implementation 'com.facebook.android:facebook-android-sdk:8.x'
     }
 }
 
